--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "standard": "^17.1.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "mysql2": "^3.11.5",
