--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
     "zod": "3.23.8"
   }
