--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "camelcase-keys": "^9.1.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
-    "zod": "3.23.8"
+    "zod": "^3.23.8"
   }
 }
