--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "eslint": "^8.57.1",
+    "eslint-config-standard": "^17.1.0",
     "picocolors": "^1.1.0",
     "standard": "^17.1.2"
   },
@@ -20,6 +21,7 @@
     "bcrypt": "^6.0.0",
     "camelcase-keys": "^9.1.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
